--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
 <header class="page-header">
   <nav class="main-navigation">
-    <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона"  class="logo-image">
+    <a><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона"  class="logo-image"></a>
     <ul class="site-navigation list-style-none">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
@@ -141,7 +141,7 @@
 <!--Интерактивная карта-->
   <section class="interactive-map">
     <h2 class="visually-hidden">Карта</h2>
-    <img src="img/map.jpg" width="1200" height="593" alt="Карта">
+    <img src="img/map.jpg" width="1200"  alt="Карта">
   </section>
 <!--/Интерактивная карта-->
 
@@ -150,21 +150,25 @@
 
 <!--подвал станицы-->
 <footer class="page-footer">
+  <div class="conteiner">
+    <div class="contacts">
+      <p> #VISITSEDONA</p>
+      <p>Тел: +7(495) 666-02-66</p>
+    </div>
 
-  <p>#VISITSEDONA</p>
-  <p>Тел: +7(495) 666-02-66</p>
 
-  <ul class="social-networks list-style-none">
-    <li><a href="https://twitter.com/" class="twitter">Twitter</a></li>
-    <li><a href="https://www.facebook.com/" class="facebook">Facebook</a></li>
-    <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
-  </ul>
+    <ul class="social-networks list-style-none">
+      <li><a href="https://twitter.com/" class="twitter">Twitter</a></li>
+      <li><a href="https://www.facebook.com/" class="facebook">Facebook</a></li>
+      <li><a href="https://www.youtube.com/" class="youtube">Youtube</a></li>
+    </ul>
 
-  <p>
-    Website by
-    <a href="https://htmlacademy.ru/intensive/htmlcss">
-    <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
-  </p>
+    <p class="copyright">
+      Website by
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+      <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
+    </p>
+  </div>
 </footer>
 <!--/подвал станицы-->
 </div>
