--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
   <header class="page-header-hotels">
     <nav class="main-navigation">
-      <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона"></a>
+      <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона" class="logo-image"></a>
       <ul class="site-navigation list-style-none">
         <li><a href="info.html">Информация</a></li>
         <li><a href="galery.html">Фото и Видео</a></li>
