--- a/catalog.html
+++ b/catalog.html
@@ -28,8 +28,8 @@
   <!-- фильтр выбора отелей -->
     <section class="feature-filter-hotels">
       <h2 class="visually-hidden">Фильтр по отелям</h2>
-      <form action="#" method="post">
-        <fieldset>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <fieldset >
           <legend>Инфраструктура:</legend>
           <input type="checkbox" name="pool" id="pool" checked>
           <label for="pool">Бассейн</label>
