--- a/catalog.html
+++ b/catalog.html
@@ -28,26 +28,31 @@
   <!-- фильтр выбора отелей -->
     <section class="feature-filter-hotels">
       <h2 class="visually-hidden">Фильтр по отелям</h2>
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <fieldset >
-          <legend>Инфраструктура:</legend>
-          <input type="checkbox" name="pool" id="pool" checked>
-          <label for="pool">Бассейн</label>
-          <input type="checkbox" name="parking" id="parking">
-          <label for="parking">Парковка</label>
-          <input type="checkbox" name="internet" id="internet">
-          <label for="internet">wi-fi</label>
-        </fieldset>
-        <fieldset>
-          <legend>Тип жилья:</legend>
-          <input type="checkbox" name="hotel" id="hotel" checked>
-          <label for="hotel">Гостиница</label>
-          <input type="checkbox" name="motel" id="motel" checked>
-          <label for="motel">Мотель</label>
-          <input type="checkbox" name="apartments" id="apartments" checked>
-          <label for="apartments">Апартаменты</label>
-        </fieldset>
-        <div>
+      <div class="container-filter-hotels">
+        <form action="https://echo.htmlacademy.ru" method="post">
+        <div class="infrastrukture">
+          <fieldset>
+            <legend>Инфраструктура:</legend>
+            <input type="checkbox" name="pool" id="pool" checked>
+            <label for="pool">Бассейн</label>
+            <input type="checkbox" name="parking" id="parking">
+            <label for="parking">Парковка</label>
+            <input type="checkbox" name="internet" id="internet">
+            <label for="internet">wi-fi</label>
+          </fieldset>
+        </div>
+        <div class="housing">
+          <fieldset>
+            <legend>Тип жилья:</legend>
+            <input type="checkbox" name="hotel" id="hotel" checked>
+            <label for="hotel">Гостиница</label>
+            <input type="checkbox" name="motel" id="motel" checked>
+            <label for="motel">Мотель</label>
+            <input type="checkbox" name="apartments" id="apartments" checked>
+            <label for="apartments">Апартаменты</label>
+          </fieldset>
+        </div>
+        <div class="price">
           <fieldset> <!--сделать 2 бегунка-->
             <legend>Стоимость в сутки (Р):</legend>
             <label for="coststart">От 0</label>
@@ -56,19 +61,9 @@
             <input type="text" id="coststop" name="coststop" max="3000"  step="100">
           </fieldset>
 
-          <!-- пример из ответов на вопрос к лекции
-          <div class="range-slider">
-            <input type="number" value="0" name="min">
-            <input type="number" value="0" name="max">
-
-            <div class="range-slider-track">
-              <div class="range-slider-pin range-slider-pin-min"></div>
-              <div class="range-slider-pin range-slider-pin-max"></div>
-            </div>
-          </div>
-          -->
           <button type="submit">Показать</button>
         </div>
+      </div>
       </form>
     </section>
 
@@ -77,28 +72,29 @@
     <section class="feature-results">
       <h2>Найдено: 3</h2>
       <h3>Сортировка:</h3>
-        <ul class="feature-filter list-style-none">
-          <li><a>по цене</a></li> <!--сделать класс active-->
-          <li><a href="#">по типу</a></li>
-          <li><a href="#">по рейтингу</a></li>
-        </ul>
+      <ul class="feature-filter list-style-none">
+        <li><a class="active-link">по цене</a></li> <!--сделать класс active-->
+        <li><a  class="dashed" href="#">по типу</a></li>
+        <li><a  class="dashed" href="#">по рейтингу</a></li>
+      </ul>
+      <div class="feature-sort"><!--стрелки -->
+        <a href="#" class="sortup">Сортировка по возрастанию</a>
+        <a href="#" class="sortdown">Сортировка по убыванию</a>
+      </div><!--/стрелки -->
     </section>
-  <!--стрелки -->
-    <section class="feature-sort">
-      <a href="#" class="sortup">Сортировка по возрастанию</a>
-      <a href="#" class="sortdown">Сортировка по убыванию</a>
-    </section>
-  <!--/стрелки -->
+
+
+
     <section class="hotel-results">
       <article class="hotel-one">
         <img src="img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
-        <h3>Amara Resort & Spa</h3>
-        <p>Гостинница </p>
-        <p>от 4000 р.</p>
-        <p>Рейтинг 8,5</p>
-        <!--рейтинг гостиницы? <span class="#">Отель 4 звезды</span>-->
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
+          <h3>Amara Resort & Spa</h3>
+          <p>Гостинница </p>
+          <p>от 4000 р.</p>
+          <p>Рейтинг 8,5</p>
+          <!--рейтинг гостиницы? <span class="#">Отель 4 звезды</span>-->
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
       </article>
       <article class="hotel-two">
         <img src="img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
@@ -110,7 +106,7 @@
         <a href="#">Подробнее</a>
         <a href="#">Забронировать</a>
       </article>
-      <article class="hotel three">
+      <article class="hotel-three">
         <img src="img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
         <h3>Villas At Poco Diablo</h3>
         <p>Апартаменты </p>
