--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--Основное содержимое-->
 <main class="page-index">
   <section class="description">
-    <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
+    <h2>Седона — небольшой городок в&nbsp;Аризоне,<br>заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
 
@@ -99,7 +99,7 @@
   <section class="interested">
     <h2>Заинтересовались?</h2>
 
-    <p>Укажите предполагаемые даты&nbsp;поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <p>Укажите предполагаемые даты&nbsp;поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
     <button type="button" class="search-button" >Поиск гостиницы в Седоне</button>
   </section>
 
