--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
 <!--Основное содержимое-->
 <main class="page-index">
+  <h1 class="visually-hidden">город Седона, Аризона, США</h1>
   <section class="description">
-    <h2>Седона — небольшой городок в&nbsp;Аризоне,<br>заслуживающий большего!</h2>
+    <h2>Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</h2>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
   </section>
 
@@ -39,7 +40,7 @@
         <div class="index-true">
         <h3>Настоящий городок</h3>
         <span> — №1 — </span>
-        <p>Седона — не аттракцион для туристов,там течёт своя жизнь</p>
+        <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
         <img src="img/feature-picture.png" width="800" height="256" alt="фотография Седоны" >
       </li>
@@ -53,7 +54,7 @@
           <li class="food">
             <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
             <h3>Еда</h3>
-            <p>Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
           <li class="souvenir">
@@ -64,7 +65,7 @@
         </ul>
       <li class="bridge">
         <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
-        <div class="index-true">
+        <div class="index-bridge">
           <h3>Там есть<br>
             Мост дьявола
           </h3>
@@ -142,7 +143,15 @@
   <section class="interactive-map">
     <h2 class="visually-hidden">Карта</h2>
     <img src="img/map.jpg" width="1200"  alt="Карта">
-  <footer class="page-footer">
+
+  </section>
+<!--/Интерактивная карта-->
+
+</main>
+<!--/Основное содержимое-->
+
+<!--подвал станицы-->
+<footer class="page-footer">
   <div class="conteiner">
     <div class="contacts">
       <p> #VISITSEDONA</p>
@@ -163,14 +172,6 @@
     </p>
   </div>
 </footer>
-  </section>
-<!--/Интерактивная карта-->
-
-</main>
-<!--/Основное содержимое-->
-
-<!--подвал станицы-->
-
 <!--/подвал станицы-->
 </div>
 </body>
