--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
       <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
   </nav>
-  <img src="img/welcome.png" width="459" height="353" alt="Изображение Добро пожаловать" class="welcome-image">
-  <img src="img/polygon.png" width="100%" alt="poligon" class="polygon-image">
 </header>
 <!--/Шапка страницы-->
 
@@ -152,7 +150,7 @@
 
 <!--подвал станицы-->
 <footer class="page-footer">
-  <div class="conteiner">
+  <div class="container">
     <div class="contacts">
       <p> #VISITSEDONA</p>
       <p>Тел: +7(495) 666-02-66</p>
