--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
   </main>
   <!--подвал станицы-->
   <footer class="page-footer">
-    <div class="conteiner">
+    <div class="container">
       <div class="contacts">
         <p> #VISITSEDONA</p>
         <p>Тел: +7(495) 666-02-66</p>
