--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <section class="search-hotels">
     <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
-    <form action="https://echo.htmlacademy.ru" method="POST" class="form">
+    <form action="https://echo.htmlacademy.ru" method="POST" class="form-index-hotel">
       <div class="conteiner-date">
         <label for="arrival day">Дата заезда:</label>
         <input type="date" name="arrival day" id="arrival day" placeholder="24 апреля 2017"/>
