--- a/catalog.html
+++ b/catalog.html
@@ -20,112 +20,146 @@
         <li><a>Гостиницы</a></li>
       </ul>
     </nav>
+    
   </header>
   <!--/Шапка страницы-->
 
   <!--Основное содержимое-->
   <main class="page-hotels">
   <!-- фильтр выбора отелей -->
-    <section class="feature-filter-hotels">
-      <h2 class="visually-hidden">Фильтр по отелям</h2>
-      <div class="container-filter-hotels">
-        <form action="https://echo.htmlacademy.ru" method="post">
-        <div class="infrastrukture">
-          <fieldset>
-            <legend class="filter-title">Инфраструктура:</legend>
-            <input type="checkbox" name="pool" id="pool" checked>
-            <label for="pool">Бассейн</label>
+  <section class="form-filter-hotel">
+    <h2 class="visually-hidden">Фильтры для поиск гостинницы</h2>
+    <form class="form" method="get" action="https://echo.htmlacademy.ru">
+     <div class="check">
+       <fieldset>
+        <legend>Инфраструктура:</legend>
+        <ul class="list-style-none">
+          <li>
+            <input type="checkbox" name="swimming-pool" id="swimmingPool" checked>
+            <label for="swimmingPool">Бассейн</label>
+          </li>
+          <li>
             <input type="checkbox" name="parking" id="parking">
             <label for="parking">Парковка</label>
-            <input type="checkbox" name="internet" id="internet">
-            <label for="internet">wi-fi</label>
-          </fieldset>
-        </div>
-        <div class="housing">
-          <fieldset>
-            <legend class="filter-title">Тип жилья:</legend>
+          </li>
+          <li>
+            <input type="checkbox" name="wi-fi" id="wifi">
+            <label for="wifi">WI-FI</label>
+          </li>
+         </ul>
+      </fieldset>
+
+      <fieldset>
+        <legend>Тип жилья:</legend>
+        <ul class="list-style-none">
+          <li>
             <input type="checkbox" name="hotel" id="hotel" checked>
-            <label for="hotel">Гостиница</label>
+            <label for="hotel">Гостинница</label>
+          </li>
+          <li>
             <input type="checkbox" name="motel" id="motel" checked>
             <label for="motel">Мотель</label>
+          </li>
+          <li>
             <input type="checkbox" name="apartments" id="apartments" checked>
             <label for="apartments">Апартаменты</label>
-          </fieldset>
-        </div>
-        <div class="filter-range">
-          <div class="filter-range-title">Стоимость в сутки (р):</div>
-          <div class="price-controls">
-            <label class="min-price">от <input type="number" name="min-price" value="0"></label>
-            <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
-          </div>
-          <div class="range-controls">
-            <div class="scale">
-              <div class="bar"></div>
-            </div>
-            <div class="range-toggle range-toggle-min"></div>
-            <div class="range-toggle range-toggle-max"></div>
-          </div>
-          <button class="btn-transparent" type="submit">Показать</button>
-        </div>
+          </li>
+         </ul>
+      </fieldset>
+    </div>
+      <div>
+        <fieldset>
+          <legend>Стоимость в сутки (р):</legend>
+          <div class="price-min-max">
+            <input type="text" name="price-min" placeholder="ОТ 0">
+            <input type="text" name="price-max" placeholder="ДО 3000">
+         </div>
+        </fieldset>
+        <button class="button-filter" type="submit">Показать</button>
       </div>
-      </form>
-    </section>
-
+    </form>
+  </section>
   <!-- /фильтр выбора отелей -->
 
-    <section class="feature-results">
-      <h2>Найдено: 3</h2>
-      <h3>Сортировка:</h3>
-      <ul class="feature-filter list-style-none">
-        <li><a class="active-link">по цене</a></li> <!--сделать класс active-->
-        <li><a  class="dashed" href="#">по типу</a></li>
-        <li><a  class="dashed" href="#">по рейтингу</a></li>
+<!-- результаты поиска -->
+    <section class="sorting">
+      <h3>Найдено: 3</h3>
+      <h4>Сортировка</h4>
+      <ul class="list-sorting list-style-none">
+        <li><a href="#" class="list-sorting-active-link">по цене</a></li>
+        <li><a href="#">по типу</a></li>
+        <li><a href="#">по рейтингу</a></li>
       </ul>
-      <div class="feature-sort"><!--стрелки -->
-        <a href="#" class="sortup">Сортировка по возрастанию</a>
-        <a href="#" class="sortdown">Сортировка по убыванию</a>
-      </div><!--/стрелки -->
-    </section>
+      <ul class="ascending-descending list-style-none">
+        <li><a class="list-sorting-active-link" href="#">по возрастанию</a></li>
+        <li><a href="#">по убыванию</a></li>
+      </ul>
+    </section>  
+<!-- /результаты поиска -->
 
 
+<section class="hotel-list">
+  <h2 class="visually-hidden">Список гостинниц, соответствующих требованиям</h2>
+  <article class="border">
+    <img src="/img/hotel-amara.jpg" widht="135" height="90" alt="Фото Amara Resort & Spa">
+    <div class="column-2">
+      <p class="hotel-name" href="#">Amara Resort & Spa</p>
+      <div>
+        <p>Гостинница </p>
+        <p>от 4000 р.</p>
+      </div>
+      <div>
+        <a class="button-hotel-detail" href="#">Подробнее</a>
+        <a class="button-hotel-booking"  href="#">Забронировать</a>
+      </div>
+    </div>
+    <div class="rating">
+      <p>Рейтинг 8,5</p>
+    </div>
 
-    <section class="hotel-results">
-      <article class="hotel-one">
-        <img src="img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
-          <h3>Amara Resort & Spa</h3>
-          <p>Гостинница </p>
-          <p>от 4000 р.</p>
-          <p>Рейтинг 8,5</p>
-          <!--рейтинг гостиницы? <span class="#">Отель 4 звезды</span>-->
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-      </article>
-      <article class="hotel-two">
-        <img src="img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
-        <h3>Desrt Quail Inn</h3>
+
+  </article>
+  <article>
+    <img src="/img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
+    <div class="column-2">
+      <p class="hotel-name" href="#">Desrt Quail Inn</p>
+      <div>
         <p>Мотель </p>
         <p>от 3000 р.</p>
-        <p>Рейтинг 8,9</p>
-        <!--рейтинг гостиницы?-->
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
-      </article>
-      <article class="hotel-three">
-        <img src="img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
-        <h3>Villas At Poco Diablo</h3>
+      </div>
+    <div>
+      <a class="button-hotel-detail" href="#">Подробнее</a>
+      <a class="button-hotel-booking" href="#">Забронировать</a>
+      </div>
+    </div>
+    <div class="rating">
+      <p>Рейтинг 8,9</p>
+    </div>
+  </article>
+
+  <article>
+    <img src="/img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
+    <div class="column-2">
+      <p class="hotel-name" href="#">Villas At Poco Diablo</p>
+      <div>
         <p>Апартаменты </p>
         <p>от 2000 р.</p>
-        <p>Рейтинг 9,2</p>
-        <!--рейтинг гостиницы?-->
-        <a href="#">Подробнее</a>
-        <a href="#">Забронировать</a>
-      </article>
-    </section>
-
+      </div>
+      <div>
+        <a class="button-hotel-detail" href="#">Подробнее</a>
+        <a class="button-hotel-booking" href="#">Забронировать</a>
+      </div>
+    </div>
+    <div class="rating">
+      <p>Рейтинг 9,2</p>
+    </div>
+  </article>
+</section>
   </main>
+
   <!--подвал станицы-->
   <footer class="page-footer">
-    <div class="conteiner">
+    <div class="container">
       <div class="contacts">
         <p> #VISITSEDONA</p>
         <p>Тел: +7(495) 666-02-66</p>
