fix logo,start popup

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
 <header class="page-header">
   <nav class="main-navigation">
-    <a><img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона"  class="logo-image"></a>
+    <a><img src="/img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона"  class="logo-image"></a>
     <ul class="site-navigation list-style-none">
       <li><a href="info.html">Информация</a></li>
       <li><a href="galery.html">Фото и Видео</a></li>
@@ -40,29 +40,29 @@
         <span> — №1 — </span>
         <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-        <img src="img/feature-picture.png" width="800" height="256" alt="фотография Седоны" >
+        <img src="/img/feature-picture.png" width="800" height="256" alt="фотография Седоны" >
       </li>
         <ul class="additional list-style-none">
           <li class="accommodation">
-            <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
+            <img src="/img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
 
           <li class="food">
-            <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
+            <img src="/img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
           <li class="souvenir">
-            <img src="img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
+            <img src="/img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
         </ul>
       <li class="bridge">
-        <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
+        <img src="/img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
         <div class="index-bridge">
           <h3>Там есть<br>
             Мост дьявола
@@ -108,7 +108,7 @@
     <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
 
     <form action="https://echo.htmlacademy.ru" method="POST" class="form-index-hotel">
-      <div class="conteiner-date">
+      <div class="container-date">
         <label for="arrival day">Дата заезда:</label>
         <input type="date" name="arrival day" id="arrival day" placeholder="24 апреля 2017"/>
         <button type="button">Календарь</button>
@@ -140,7 +140,7 @@
 <!--Интерактивная карта-->
   <section class="interactive-map">
     <h2 class="visually-hidden">Карта</h2>
-    <img src="img/map.jpg" width="1200"  alt="Карта">
+    <img src="/img/map.jpg" width="1200"  alt="Карта">
 
   </section>
 <!--/Интерактивная карта-->
@@ -166,7 +166,7 @@
     <p class="copyright">
       Website by
       <a href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
+      <img src="/img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy"></a>
     </p>
   </div>
 </footer>
