--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="wrapper">
 <header class="page-header">
   <nav class="main-navigation">
-    <a href="#">
-      <img class="logo-image" src="/img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
+    <a class="logo-image" href="#">
+      <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
     <ul class="site-navigation list-style-none">
       <li><a href="info.html">Информация</a></li>
@@ -42,29 +42,29 @@
         <span> — №1 — </span>
         <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
-        <img src="/img/feature-picture.png" width="800" height="256" alt="фотография Седоны" >
+        <img src="img/feature-picture.png" width="800" height="256" alt="фотография Седоны" >
       </li>
         <ul class="additional list-style-none">
           <li class="accommodation">
-            <img src="/img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
+            <img src="img/icon-1.svg" width="75" height="72" alt="Иконка Жилье">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
 
           <li class="food">
-            <img src="/img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
+            <img src="img/icon-3.svg" width="74" height="70" alt="Иконка Еда">
             <h3>Еда</h3>
             <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </li>
 
           <li class="souvenir">
-            <img src="/img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
+            <img src="img/icon-2.svg" width="64" height="76" alt="Иконка Сувениры">
             <h3>Сувениры</h3>
             <p>Не только китайского, но и местного производства!</p>
           </li>
         </ul>
       <li class="bridge">
-        <img src="/img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
+        <img src="img/feature-picture-2.jpg" width="800" height="256" alt="Слой 5">
         <div class="index-bridge">
           <h3>Там есть<br>
             Мост дьявола
