--- a/catalog.html
+++ b/catalog.html
@@ -100,10 +100,12 @@
   <!--список отелей-->
       <section class="hotel-list">
         <h2 class="visually-hidden">Список гостинниц, соответствующих требованиям</h2>
-        <article class="border">
-          <img src="/img/hotel-amara.jpg" widht="135" height="90" alt="Фото Amara Resort & Spa">
+        <article>
+          <img src="/img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
           <div class="column-2">
-            <p class="hotel-name" href="#">Amara Resort & Spa</p>
+            <a href="#">
+              <h2 class="hotel-name">Amara Resort & Spa</h2>
+            </a>
             <div>
               <p>Гостинница </p>
               <p>от 4000 р.</p>
@@ -114,6 +116,7 @@
             </div>
           </div>
           <div class="rating">
+            <span class="four-stars"></span> 
             <p>Рейтинг 8,5</p>
           </div>
 
@@ -122,7 +125,9 @@
         <article>
           <img src="/img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
           <div class="column-2">
-            <p class="hotel-name" href="#">Desrt Quail Inn</p>
+            <a href="#">
+              <h2 class="hotel-name" >Desrt Quail Inn</h2>
+            </a>
             <div>
               <p>Мотель </p>
               <p>от 3000 р.</p>
@@ -133,6 +138,7 @@
             </div>
           </div>
           <div class="rating">
+            <span class="three-stars"></span> 
             <p>Рейтинг 8,9</p>
           </div>
         </article>
@@ -140,7 +146,9 @@
         <article>
           <img src="/img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
           <div class="column-2">
-            <p class="hotel-name" href="#">Villas At Poco Diablo</p>
+            <a href="#">
+            <h2 class="hotel-name">Villas At Poco Diablo</h2>
+            </a>
             <div>
               <p>Апартаменты </p>
               <p>от 2000 р.</p>
@@ -151,6 +159,7 @@
             </div>
           </div>
           <div class="rating">
+            <span class="two-stars"></span> 
             <p>Рейтинг 9,2</p>
           </div>
         </article>
