--- a/catalog.html
+++ b/catalog.html
@@ -91,8 +91,20 @@
           <li><a href="#">по рейтингу</a></li>
         </ul>
         <ul class="ascending-descending list-style-none">
-          <li><a class="list-sorting-active-link" href="#">по возрастанию</a></li>
-          <li><a href="#">по убыванию</a></li>
+          <li>
+            <a class="passive-link" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class= "active-link" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                <path fill="#231F20" d="M5.5 10L0 0h11"/>
+              </svg>
+            </a>
+          </li>
         </ul>
       </section>  
   <!-- /результаты поиска -->
