--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
       <section class="hotel-list">
         <h2 class="visually-hidden">Список гостинниц, соответствующих требованиям</h2>
         <article>
-          <img src="/img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
+          <img src="./img/hotel-amara.jpg" width="135" height="90" alt="Фото Amara Resort & Spa">
           <div class="column-2">
             <a href="#">
               <h2 class="hotel-name">Amara Resort & Spa</h2>
@@ -135,7 +135,7 @@
 
         </article>
         <article>
-          <img src="/img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
+          <img src="./img/hotel-desert.jpg" width="135" height="90" alt="Фото Desrt Quail Inn">
           <div class="column-3">
             <a href="#">
               <h2 class="hotel-name" >Desrt Quail Inn</h2>
@@ -156,7 +156,7 @@
         </article>
 
         <article>
-          <img src="/img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
+          <img src="./img/hotel-villas.jpg" width="135" height="90" alt="Фото Villas At Poco Diablo">
           <div class="column-4">
             <a href="#">
             <h2 class="hotel-name">Villas At Poco Diablo</h2>
