--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
     </a>
     <ul class="site-navigation list-style-none">
-      <li><a href="info.html">Информация</a></li>
-      <li><a href="galery.html">Фото и Видео</a></li>
-      <li><a href="map.html">Карта штата</a></li>
+      <li><a href="#">Информация</a></li>
+      <li><a href="#">Фото и Видео</a></li>
+      <li><a href="#">Карта штата</a></li>
       <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
   </nav>
